--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="images/manos mundo.jpg" />
+		<img id="fotografia" src="images/photos/manos mundo.jpg" />
 		<div id="header">
 			<h1>Presentación</h1>
 		</div>
