puestas las fotos

--- a/en/history.html
+++ b/en/history.html
@@ -85,9 +85,9 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/logo2.jpg" />
 		<div id="header">
-			<h1>Historia</h1>
+			<h1>History</h1>
 		</div>
 		<p id="contenido">The activity of OI & S was founded in September 2009 with the task of drafting a major works related to the water cycle, which 			includes, among others, the activities of collection, treatment, transmission and supply of water in the Republic of Equatorial Guinea for a 			significant number of municipalities with significant horizon population growth.<br><br>After the project of the Republic of Equatorial Guinea, and 			lessons, international relations and trade relations with other Spanish and foreign companies in the sector, OI & S expands its customer base and 			diversified operations in other countries, currently developing projects more than 10 countries on three continents.<br><br>OI&S still being a young 			group, has the extensive experience of its members, who are developing the activity in the sector for over 25 years.</p>
 	</article>
