--- a/en/quality.html
+++ b/en/quality.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/photos/diseñando.jpg" />
 		<div id="header">
 			<h1>Quality and Certifications</h1>
 		</div>
