--- a/es/galeria.html
+++ b/es/galeria.html
@@ -151,7 +151,7 @@
 				</div>
 
 				<div id="slide6" class="slide">
-				        <img src="../images/photos/diseñando.jpg" alt="Proyecto" />
+				        <img src="../images/photos/machinda.JPG" alt="Proyecto" />
 				        <div class="slideContent">
 					      	<h3>Título de la foto</h3>
 						<p>Descripción de la fotografía</p>	
@@ -159,7 +159,40 @@
 				</div>
 
 				<div id="slide7" class="slide">
-				        <img src="../images/photos/diseñando.jpg" alt="Proyecto" />
+				        <img src="../images/photos/reunion.JPG" alt="Proyecto" />
+				        <div class="slideContent">
+					      	<h3>Título de la foto</h3>
+						<p>Descripción de la fotografía</p>	
+        				</div>  
+				</div>
+
+				<div id="slide8" class="slide">
+				        <img src="../images/photos/rio.JPG" alt="Proyecto" />
+				        <div class="slideContent">
+					      	<h3>Título de la foto</h3>
+						<p>Descripción de la fotografía</p>	
+        				</div>  
+				</div>
+
+				<div id="slide9" class="slide">
+				        <img src="../images/photos/construccion.jpg" alt="Proyecto" />
+				        <div class="slideContent">
+					      	<h3>Título de la foto</h3>
+						<p>Descripción de la fotografía</p>	
+        				</div>  
+				</div>
+
+
+				<div id="slide10" class="slide">
+				        <img src="../images/photos/proviv.JPG" alt="Proyecto" />
+				        <div class="slideContent">
+					      	<h3>Título de la foto</h3>
+						<p>Descripción de la fotografía</p>	
+        				</div>  
+				</div>
+
+				<div id="slide11" class="slide">
+				        <img src="../images/photos/generador.JPG" alt="Proyecto" />
 				        <div class="slideContent">
 					      	<h3>Título de la foto</h3>
 						<p>Descripción de la fotografía</p>	
@@ -176,7 +209,10 @@
 				<span class="jFlowControl"></span>
 				<span class="jFlowControl"></span>
 				<span class="jFlowControl"></span>
-
+				<span class="jFlowControl"></span>
+				<span class="jFlowControl"></span>
+				<span class="jFlowControl"></span>
+				<span class="jFlowControl"></span>
 			</div>
 
 			<div class="jFlowPrev"></div>
