--- a/en/index.html
+++ b/en/index.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/photos/manos mundo.jpg" />
 		<div id="header">
 			<h1>Presentation</h1>
 		</div>
