--- a/en/ingeniery.html
+++ b/en/ingeniery.html
@@ -84,7 +84,7 @@
 		<li><a href="contact.html">Contact</a></li>
 	</nav>
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/photos/tuberia.jpg" />
 		<div id="header">
 			<h1>Ingenery</h1>
 		</div>
