--- a/en/mission.html
+++ b/en/mission.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/sin formatear/DSC00185.jpg" />
 		<div id="header">
 			<h1>Mission and corporate strategy</h1>
 		</div>
