--- a/en/news.html
+++ b/en/news.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/sin formatear/DSC00181.jpg" />
 		<div id="header">
 			<h1>News</h1>
 		</div>
