--- a/en/value.html
+++ b/en/value.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/sin formatear/DSC00211.jpg" />
 		<div id="header">
 			<h1>Value creation</h1>
 		</div>
