--- a/en/work.html
+++ b/en/work.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/sin formatear/DSC00211.jpg" />
 		<div id="header">
 			<h1>Civil work</h1>
 		</div>
