--- a/es/colaboraciones.html
+++ b/es/colaboraciones.html
@@ -86,7 +86,7 @@
 
 
 	<article>
-    		<img id="fotografia" src="../images/tuberia.jpg" />
+    		<img id="fotografia" src="../images/photos/reunion.JPG" />
 		<div id="header">
 			<h1>Colaboraciones</h1>
 		</div>
