--- a/es/historia.html
+++ b/es/historia.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/logo2.jpg" />
 		<div id="header">
 			<h1>Historia</h1>
 		</div>
