--- a/es/mision.html
+++ b/es/mision.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/sin formatear/DSC00185.jpg" />
 		<div id="header">
 			<h1>Misión y Estrategia Corporativa</h1>
 		</div>
