--- a/es/servicios.html
+++ b/es/servicios.html
@@ -85,7 +85,7 @@
 	</nav>
 
 	<article>
-		<img id="fotografia" src="../images/tuberia.jpg" />
+		<img id="fotografia" src="../images/sin formatear/DSC00883.JPG" />
 		<div id="header">
 			<h1>Servicios</h1>
 		</div>
