Página entera solo falta el aviso legal

--- a/en/address.html
+++ b/en/address.html
@@ -41,9 +41,9 @@
 	<header>
   		<div id="cabecera_superior">
       			<ul>
-			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
+			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -93,10 +93,10 @@
 		<p>O bien rellenando este <a class="form" href="formulario.html">formulario</a>.</p><br>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
 		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+	</div>
 
 </body>
 
