--- a/en/collaborations.html
+++ b/en/collaborations.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Home</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Print</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
         			<li><a href="contact.html" id="ControlCabecera_A4" class="ContactoLnk">Contact</a></li>
       			</ul>
     		</div>
@@ -93,10 +93,10 @@
 		<p id="contenido">One of the main lines of action of CSR as collaborations are concerned, is the active cooperation on projects to promote the 			creation and development of water resources in African countries.<br><br>OI&S has worked for over ten years with the Foundation Emalaikat, which aims 			at the development of water resources in arid areas of the African continent, as the axis that underpins health and disease spread local and endemic, 			agriculture as a source of nutrition and work and education as development plan of future generations, all these actions in areas where infant 			mortality is 22%.<br><br>Emalaikat Foundation focuses its efforts on areas such as northern Kenya and Ethiopia, and its long-term programs and the 			constant presence of outside contributors. This is a private nonprofit organization registered in the Register of Associations and Foundations of the 			Interior Ministry.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. All rights reserved.<p>
 		<p><a href="index.html" id="legal">Legal Notice</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
