--- a/en/commitment.html
+++ b/en/commitment.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Home</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Print</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
         			<li><a href="contact.html" id="ControlCabecera_A4" class="ContactoLnk">Contact</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">Corporate Responsibility is the set of actions that a company should adopt in order to contribute favorably to all areas of 			society. In OI&S have a strong commitment from all levels of the group internally, developing our business with respect and bringing everything in 			our power to fulfill this task of contributing to society.<br><br>So in OI&S tried to involve and encourage all social groups that interact with us, 			whether satisfying our customers as efficiently as possible, encouraging employment due to an expanding group, giving training to all our 			employees, ... in short, we are committed to do our work in harmony with all levels and groups in society.<br><br>This we have done our 		responsibility, but would not be accommodated by us have total respect and commitment to the environment. That is why all our areas of activity are 			governed by criteria that minimize environmental impact criteria ranging from the rational use of the resources used, until the proper treatment of 			waste generated.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. All rights reserved.<p>
 		<p><a href="index.html" id="legal">Legal Notice</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
