--- a/en/history.html
+++ b/en/history.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Home</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Print</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
         			<li><a href="contact.html" id="ControlCabecera_A4" class="ContactoLnk">Contact</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">The activity of OI & S was founded in September 2009 with the task of drafting a major works related to the water cycle, which 			includes, among others, the activities of collection, treatment, transmission and supply of water in the Republic of Equatorial Guinea for a 			significant number of municipalities with significant horizon population growth.<br><br>After the project of the Republic of Equatorial Guinea, and 			lessons, international relations and trade relations with other Spanish and foreign companies in the sector, OI & S expands its customer base and 			diversified operations in other countries, currently developing projects more than 10 countries on three continents.<br><br>OI&S still being a young 			group, has the extensive experience of its members, who are developing the activity in the sector for over 25 years.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. All rights reserved.<p>
 		<p><a href="index.html" id="legal">Legal Notice</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
