--- a/en/index.html
+++ b/en/index.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Home</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Print</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
         			<li><a href="contact.html" id="ControlCabecera_A4" class="ContactoLnk">Contact</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">OI&S is an international engineering, construction and services. Its activity focuses exclusively on the international market, 			developing civil works projects, both in planning and execution and services, in South America, Africa and Europe. <br><br>Drawing on the extensive 			experience of the partners in the area of ​​design and construction in buildings, and with excellent international relations at the institutional 		level, OI & S. was founded for international civil engineering projects for government agencies, but also undertakes projects for private 			entities.<br><br>OI&S is working to expand its field of activity, its resources and its business volume, keeping in mind the commitment to offer the 			maximum guarantee of quality, innovation and improvement in all projects in which it participates. The diversification of its customers and the 		countries in which develops projects, is one of the guarantees for which the Group bet, given the global economic situation.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. All rights reserved.<p>
 		<p><a href="index.html" id="legal">Legal Notice</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
