--- a/en/ingeniery.html
+++ b/en/ingeniery.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Home</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Print</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
         			<li><a href="contact.html" id="ControlCabecera_A4" class="ContactoLnk">Contact</a></li>
       			</ul>
     		</div>
@@ -91,10 +91,10 @@
 		<p id="contenido">The field of engineering and project development is a business line for which he has committed since its inception the group 			OI&S.<br><br>OI&S develops infrastructure projects and services, such as highways, roads, bridges, buildings, developments, etc. which help to 			develop the area where they implant to improve the standard of living of the people and the country's industrial development.<br><br>In engineering 			projects, and given the history of the group, OI&S has chosen especially for the water works, currently developing projects in several countries 			covering the entire water cycle, from catchment, purification system operators and tariff system, to sewerage, sanitation and sewage treatment 			plant.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. All rights reserved.<p>
 		<p><a href="index.html" id="legal">Legal Notice</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
