--- a/en/quality.html
+++ b/en/quality.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Home</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Print</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
         			<li><a href="contact.html" id="ControlCabecera_A4" class="ContactoLnk">Contact</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">Meet the expectations of our customers. OI&S has been proposed from the beginning fulfill this premise, they pay special 			attention to the quality of their work, in fulfilling its commitments to improve and upgrade their production processes and management, in planning 			their projects and the efficiency and competitiveness of their performances.<br><br>For this reason, the group has a strong commitment to quality, 			and therefore is certified ISO 9001 specification gives us the accreditation of the most demanding European standards.<br><br>Likewise OI&S has 		chosen sustainable development always thinking of the good of future generations. Therefore all their actions are governed by policies that ensure 			that the environment does not suffer any prejudice by them. Thus OI & S has been certified ISO 14001 whose main lines are the identification and 			evaluation for each work of significant environmental aspects and establishing practices that minimize the impact and control of operations in order 			to verify its effectiveness and suitability of the Environmental Management System.<br><br>OI&S feels a special commitment to all its employees, its 			subcontractors and all staff employed in different human activities. This commitment is reflected in the OHSAS 18001 certification, an 			internationally recognized assessment specification for environmental management systems of health and safety at work, which accreditation OI&S is 			proud to tell.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. All rights reserved.<p>
 		<p><a href="index.html" id="legal">Legal Notice</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
