--- a/en/work.html
+++ b/en/work.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Home</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Print</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
         			<li><a href="contact.html" id="ControlCabecera_A4" class="ContactoLnk">Contact</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">Another line of business that develops the group is the execution of civil works. Whether for private clients or public 			international bodies, OI&S is committed to do their jobs run with detail, quality and values ​​that each client may require.<br><br>Given the 			characteristics of the group, OI&S specializes in the implementation of water projects. Armed with the latest techniques in the execution of 			hydraulic and mechanical equipment tech, OI&S is proud to satisfy its customers in all the needs they may have.<br><br>Following strict selection 			criteria and prudence in the recruitment and selection of projects, and with local partners that meet our quality standards, OI&S develops civil 			engineering projects at international level, such as highways and roads, marine works or bridges and large structures.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. All rights reserved.<p>
 		<p><a href="index.html" id="legal">Legal Notice</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
