--- a/es/calidad.html
+++ b/es/calidad.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">Cumplir con las expectativas de nuestros clientes. OI&S se ha propuesto desde sus comienzos cumplir con esta premisa, por lo que 			presta especial atención en la calidad de sus trabajos, en el cumplimiento de sus compromisos, en la mejora y actualización de sus procesos 			productivos y de gestión, en la planificación de sus proyectos y en la eficiencia y competitividad de sus actuaciones.<br><br>Por este motivo, el 			grupo tiene un férreo compromiso con la de calidad, y por ello cuenta con la certificación ISO 9001, especificación que nos otorga la acreditación de 			los más exigentes estándares europeos.<br><br>Así mismo OI&S ha apostado por el desarrollo sostenible siempre pensando en el bien de las generaciones 			futuras. Por ello todas sus actuaciones se rigen por políticas que aseguren que el Medio Ambiente no sufre ningún perjuicio por ellas. En este 			sentido OI&S cuenta con la certificación ISO 14001 cuyas líneas principales son la identificación y la evaluación para cada obra de los aspectos 			ambientales significativos y el establecimiento de prácticas que minimicen el impacto, así como el control de las operaciones realizadas con el 		objetivo de comprobar su eficacia y adecuación del Sistema de Gestión Ambiental.<br><br>OI&S siente un compromiso especial con todos sus 			trabajadores, su personal subcontratado y todo el personal humano empleado en sus diferentes actividades. Este compromiso se traduce en la 			certificación OHSAS 18001, especificación de evaluación reconocida internacionalmente para sistemas de gestión de la salud y la seguridad en el 		trabajo, acreditación de la cual OI&S se siente orgullosa de contar.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
-		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
+	</div>
 </body>
 
 </html>
