--- a/es/colaboraciones.html
+++ b/es/colaboraciones.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -93,10 +93,10 @@
 		<p id="contenido">Una de las principales líneas de acción de Responsabilidad Social Corporativa en cuanto colaboraciones se refiere, es la 			cooperación activa en proyectos para promover la creación y desarrollo de recursos acuíferos en países Africanos.<br><br>OI&S ha colaborado desde 			hace más de diez años con la Fundación Emalaikat, que tiene por objeto el desarrollo de recursos acuíferos en zonas áridas del Continente Africano, 			como eje que vertebre la salud y propagación de enfermedades locales y endémicas, la agricultura como fuente de nutrición y trabajo y programas de 			educación como plan de desarrollo de las futuras generaciones, todo estas actuaciones en zonas donde la mortandad infantil es del 22%.<br><br>La 			Fundación Emalaikat centra sus esfuerzos en zonas como el norte de Kenia y Etiopía, siendo sus programas de larga duración y con la presencia 			constante de colaboradores externos. Se trata de una organización privada no lucrativa inscrita en el Registro de Asociaciones y Fundaciones del 			Ministerio del Interior.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
-		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
+	</div>
 </body>
 
 </html>
