--- a/es/galeria.html
+++ b/es/galeria.html
@@ -15,8 +15,8 @@
 			slides: "#mySlides",  // the div where all your sliding divs are nested in
 			selectedWrapper: "jFlowSelected",  // just pure text, no sign
 			effect: "flow", //this is the slide effect (rewind or flow)
-			width: "500px",  // this is the width for the content-slider
-			height: "300px",  // this is the height for the content-slider
+			width: "27em",  // this is the width for the content-slider
+			height: "20em",  // this is the height for the content-slider
 			duration: 400,  // time in milliseconds to transition one slide
 			pause: 5000, //time between transitions
 			prev: ".jFlowPrev", // must be class, use . sign
@@ -62,7 +62,7 @@
       			<ul>
 			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -222,10 +222,10 @@
 		<!--end: sliderContainer -->
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
-		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
+	</div>
 </body>
 
 </html>
