--- a/es/historia.html
+++ b/es/historia.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">La actividad de OI&S nace en septiembre del 2009 con el encargo de redacción de un proyecto importante de obras relacionadas con el 			ciclo del agua, donde se incluyen, entre otras, las actividades de captación, depuración, conducción y suministro de agua en la República de Guinea 			Ecuatorial para un notable número de municipios con importante horizonte de crecimiento de la población.<br><br>Tras el Proyecto de la Republica de 			Guinea Ecuatorial, y aprovechando la experiencia, las relaciones internacionales y las relaciones comerciales con otras empresas españolas y 			extranjeras dentro del sector, OI&S amplía su cartera de clientes y diversifica las operaciones en otros países, desarrollando actualmente proyectos 			en más de 10 países repartidos en 3 continentes.<br><br>OI&S aún siendo un Grupo Joven, cuenta con la dilatada experiencia de sus socios, los cuales 			llevan desarrollando la actividad en el sector durante más de 25 años.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
-		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
+	</div>
 </body>
 
 </html>
