--- a/es/ingenieria.html
+++ b/es/ingenieria.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">El campo de la Ingeniería y desarrollo de proyectos es una las líneas de negocio por la que ha apostado desde sus comienzos el 			grupo OI&S.<br><br>OI&S desarrolla proyectos de infraestructuras y servicios, como por ejemplo autopistas, viales, puentes, edificación, 			urbanizaciones, etc los cuales contribuyen a desarrollar la zona donde se implantan para la mejora del nivel de vida de las poblaciones y el 			desarrollo industrial del país.<br><br>Dentro de los proyectos de Ingeniería, y dada la historia del grupo, OI&S ha apostado especialmente por la 			obras hidráulicas, desarrollando actualmente proyectos en varios países que abarcan el ciclo completo del agua, desde su captación, potabilización 			redes de transporte y sistema tarifario, hasta alcantarillados, saneamiento y plantas de depuración.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
-		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
+	</div>
 </body>
 
 </html>
