--- a/es/obra.html
+++ b/es/obra.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">Otra de las líneas de negocio que desarrolla el grupo es la ejecución de obra civil. Ya sea para clientes privados o para entidades 			públicas internacionales, OI&S se ha comprometido a realizar sus trabajos de ejecución con el detalle, la calidad y los valores que cada Cliente en 			particular pueda exigir.<br><br>Dadas las características del grupo, OI&S es especialista en la ejecución de obras hidráulicas. Contando con las 			últimas técnicas en la ejecución de obras hidráulicas y la última tecnología de equipamientos mecánicos, OI&S se enorgullece de poder satisfacer a 			sus clientes en todas las necesidades que ellos puedan plantear.<br><br>Siguiendo unos estrictos criterios de selección y prudencia en la 			contratación y elección de sus proyectos, y contando con socios locales que cumplan con nuestros estándares de calidad, OI&S desarrolla proyectos de 			obra civil a nivel Internacional, como pueden ser autopistas y viales, obras marítimas o puentes y grandes estructuras.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
-		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
+	</div>
 </body>
 
 </html>
