--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="es/mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="es/contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -94,10 +94,10 @@
 		<p id="contenido">OI&S es un grupo internacional de Ingeniería, Construcción y Servicios. Su actividad se centra exclusivamente en el mercado 			internacional, desarrollando proyectos de Obra Civil, tanto en proyección y ejecución como en servicios, en Suramérica, África y Europa. 			<br><br>Aprovechando la dilatada experiencia de los socios en el área de la proyección y construcción en edificación, y contando con excelentes 		relaciones internacionales a nivel institucional, OI&S. fue fundada para realizar proyectos de Obra Civil internacionales para Organismos Públicos, 			aunque igualmente realiza proyectos para entidades privadas.<br><br>OI&S sigue trabajando para ampliar su campo de actividad, sus recursos y su 		volumen de negocio, teniendo siempre presente el compromiso de ofrecer la máxima garantía de calidad, innovación y mejora en todos los proyectos en 			los que participa. La diversificación de sus clientes y los Países en la que desarrolla proyectos, es una de las garantías por las que apuesta el 			Grupo, dada la situación económica mundial.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
 		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
