--- a/en/welcome.html
+++ b/en/welcome.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="index.html" id="ControlCabecera_A1" class="InicioLnk">Home</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Print</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">SiteMap</a></li>
         			<li><a href="contact.html" id="ControlCabecera_A4" class="ContactoLnk">Contact</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="agr"><b>Welcome to our website</b><br>Mariano Rodriguez Llama<br>President of OI&S</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. All rights reserved.<p>
 		<p><a href="index.html" id="legal">Legal Notice</a></p> 
-	</footer>
+	</div>
 </body>
 
 </html>
