--- a/es/compromiso.html
+++ b/es/compromiso.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -92,10 +92,10 @@
 		<p id="contenido">La Responsabilidad Corporativa es el conjunto de acciones que una empresa debe adoptar para poder contribuir de manera favorable a 			todos los ámbitos de la sociedad. En OI&S tenemos el fuerte compromiso, desde todos los niveles internos del grupo, de desarrollar nuestra actividad 			respetando y aportando todo lo que esté en nuestra mano para desempeñar esta tarea de contribución a la sociedad.<br><br>Por ello, en OI&S intentamos 			involucrar y fomentar a todos los grupos sociales que interactúan con nosotros, ya sea satisfaciendo a nuestros clientes con la mayor eficacia 			posible, fomentando el empleo consecuencia de un Grupo en expansión, dando formación continua a todos nuestros trabajadores,… en definitiva, nuestro 			compromiso es realizar nuestro trabajo en total armonía con todos los niveles y grupos de la sociedad.<br><br>Esta responsabilidad que hemos hecho 			nuestra, no tendría cabida sino hubiese por nuestra parte un total respeto y compromiso con el Medio Ambiente. Es por este motivo que todas nuestras 			áreas de actividad se rigen por criterios que minimizan el impacto ambiental, criterios que abarcan desde un uso racional de los recursos empleados, 			hasta el tratamiento adecuado de los residuos generados.</p>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
-		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
+	</div>
 </body>
 
 </html>
