--- a/es/mision.html
+++ b/es/mision.html
@@ -43,7 +43,7 @@
       			<ul>
 			        <li><a href="../index.html" id="ControlCabecera_A1" class="InicioLnk">Inicio</a></li>
         			<li><a href="" id="ControlCabecera_A2" class="ImprimirLnk" onclick="window.print(); return false;">Imprimir</a></li>
-        			<li><a href="" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
+        			<li><a href="mapWeb.html" id="ControlCabecera_A3" class="MapaWebLnk">Mapa Web</a></li>
         			<li><a href="contacto.html" id="ControlCabecera_A4" class="ContactoLnk">Contacto</a></li>
       			</ul>
     		</div>
@@ -105,10 +105,10 @@
 		</div>
 	</article>
 
-	<footer>
+	<div id="footer">
 		<p>©2012 Overseas Infrastructures & Services. Todos los derechos reservados.<p>
-		<p><a href="../index.html" id="legal">Aviso Legal</a></p> 
-	</footer>
+		<p><a onclick="window.open('es/noticias.html')" href="#">Aviso Legal</a></p> 
+	</div>
 </body>
 
 </html>
